samples/_failures_safe/1761087991_237ace_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecbe6001.c: In function ‘read_operator’:
./samples/SAFE/__tmp_ecbe6001.c:155:5: error: expected expression at end of input
  155 |     } else if (
      |     ^
./samples/SAFE/__tmp_ecbe6001.c:155:5: error: expected declaration or statement at end of input
